--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
       <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
     <![endif]-->
-    <title>ONE PAGE Site que gera resultados para você</title>
+    <title>ONE PAGE Site que gera resultados</title>
     <!-- Bootstrap -->
      <link href="./assets/css/bootstrap.css" rel="stylesheet">	
      <link href="./assets/css/styles.css" rel="stylesheet">	
