--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       		  <h3 class="text-center">5 razões pelas quais o ONE PAGE é o futuro</h3>
       		  <article>
       		    <h4 class="text-center"><span class="number">1</span> - O projeto é todo artesanal sempre  voltado para gerar mais resultados</h4>
-      		    <p>Sem modelos ou terceirização. Cada site ONE PAGE é criado a partir do zero para você. Nós otimizamos o projeto para o máximo desempenho com base nos seus objetivos de negócios.</p>
+      		    <p class="text-center">Sem modelos ou terceirização. Cada site ONE PAGE é criado a partir do zero para você. Nós otimizamos o projeto para o máximo desempenho com base nos seus objetivos de negócios.</p>
       		    <h5>ONE PAGE funciona melhor para</h5>
       		  </article> 
       		</div><!-- Fim span -->	
@@ -97,7 +97,7 @@
       		<div class="span12">
       		  <div class="span12">
       		    <h4 class="text-center"><span class="number">2</span> - Funciona em qualquer tela</h4>
-      		    <p>As pessoas visitam o seu site a partir de diversos dispositivos, de modo que nós construímos o ONE PAGE para qualquer tela. Seu site ONE PAGE se ajusta automaticamente o seu design e cria uma experiência otimizada para acomodar todos os visitantes em qualquer dispositivo.</p>
+      		    <p class="text-center">As pessoas visitam o seu site a partir de diversos dispositivos, de modo que nós construímos o ONE PAGE para qualquer tela. Seu site ONE PAGE se ajusta automaticamente o seu design e cria uma experiência otimizada para acomodar todos os visitantes em qualquer dispositivo.</p>
       		  </div>
       		</div><!-- Fim span -->			
       	</div><!-- Fim row -->
@@ -106,10 +106,12 @@
     <section class="mais">
       <div class="container">
       	<div class="row">
-      		<div class="span12">	
+      	 <img class="pull-right" src="assets/img/analytcs.png" alt="analytcs" width="370" height="351">
+      		<div class="span6">	
       		  <article>
-      		    <h4 class="text-center"><span class="number">3</span> - Elegante e inteligente</h4>
-      		    <p>Sem modelos ou terceirização. Cada site ONE PAGE é criado a partir do zero para você, aqui em Porto Alegre. Nós otimizamos o projeto para o máximo desempenho com base nos seus objetivos de negócios.</p>
+      		    <h4><span class="number">3</span> - Elegante e inteligente</h4>
+      		    <p>Além de ser bonito o ONE PAGE tem agregado ferramentas de análise. Veja o que está funcionando, o que não, use estas informações para melhorar o desempenho do seu site.</p> 
+      		    <p>Nós fornecemos uma análise de desempenho FREE por 30 dias para discutir como você como o seu site pode converter  ainda mais.</p>
       		  </article> 
       		</div><!-- Fim span -->			
       	</div><!-- Fim row -->
