--- a/index.html
+++ b/index.html
@@ -117,6 +117,40 @@
       	</div><!-- Fim row -->
       </div><!-- Fim container -->
     </section><!-- Fim mais -->   
+    
+    <section class="deadline">
+      <div class="container">
+      	<div class="row">	
+      	    <div class="bar"></div> 
+      		  <div class="span2 text-center">
+      		    <img src="assets/img/analytcs.png" class="img-circle" width="150" height="150">
+      		    <h4>Questionário com o cliente</h4>
+      		    <p>Nós fornecemos um questionário web para você apresentar sua visão do seu projeto e juntos revisamos com sua equipe pelo telefone</p>
+      		  </div>
+      		  <div class="span2 text-center">
+      		    <img src="assets/img/analytcs.png" class="img-circle" width="150" height="150">
+      		    <h4>Questionário com o cliente</h4>
+      		    <p>Nós fornecemos um questionário web para você apresentar sua visão do seu projeto e juntos revisamos com sua equipe pelo telefone</p>
+      		  </div>
+      		  <div class="span2 text-center">
+      		    <img src="assets/img/analytcs.png" class="img-circle" width="150" height="150">
+      		    <h4>Questionário com o cliente</h4>
+      		    <p>Nós fornecemos um questionário web para você apresentar sua visão do seu projeto e juntos revisamos com sua equipe pelo telefone</p>
+      		  </div>
+      		  <div class="span2 text-center">
+      		    <img src="assets/img/analytcs.png" class="img-circle" width="150" height="150">
+      		    <h4>Questionário com o cliente</h4>
+      		    <p>Nós fornecemos um questionário web para você apresentar sua visão do seu projeto e juntos revisamos com sua equipe pelo telefone</p>
+      		  </div>
+      		  <div class="span2 text-center">
+      		    <img src="assets/img/analytcs.png" class="img-circle" width="150" height="150">
+      		    <h4>Questionário com o cliente</h4>
+      		    <p>Nós fornecemos um questionário web para você apresentar sua visão do seu projeto e juntos revisamos com sua equipe pelo telefone</p>
+      		  </div>		
+      	</div><!-- Fim row -->
+      </div><!-- Fim container -->
+    </section>
+    
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
